--- a/style.css
+++ b/style.css
@@ -1,17 +1,25 @@
+body {
+  background: var(--bg);
+  background-image: linear-gradient(135deg, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.2));
+  color: var(--fg);
+  background-repeat: no-repeat;
+  animation-name: colors;
+  animation-duration: 8s;
+ 
+  height: 100px;
+  min-height: 200px;
+  display: grid;
+  place-items: center;
+  transition: background-color var(--trans-dur), color var(--trans-dur);
+}
 
 
-
-body{
-    background: linear-gradient(#000,#fff);
-    height: 100vh;
-     font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif ;
-     font-size: 30px;
      /********/
      
-     animation-name: colors;
+    /* animation-name: colors;
      animation-duration: 8s;
-     animation-iteration-count: infinite;
-}
+     animation-iteration-count: infinite;*/
+
 .sid{
     color: #fff;
 }
@@ -26,11 +34,11 @@ ul li{
 }
 ul li a {
     text-decoration: none;
-    color: aqua;
+    color: rgb(233, 233, 233);
     transition: 0.4s;
 }
   ul li a:hover{
-    color: red;
+    color: var(--sid);
 }
 
 :root {
@@ -39,21 +47,12 @@ ul li a {
     --fg-t: rgba(227, 228, 232, 0.5);
     --primary1: #255ff4;
     --primary2: #5583f6;
+    --sid:red;
     --trans-dur: 0.3s;
     font-size: calc(16px + (20 - 16) * (100vw - 320px) / (1280 - 320));
   }
   
-  body {
-    background-color: var(--bg);
-    background-image: linear-gradient(135deg, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.2));
-    color: var(--fg);
-   font: 1em/1.5 "Varela Round", Helvetica, sans-serif;
-    height: 100vh;
-    min-height: 360px;
-    display: grid;
-    place-items: center;
-    transition: background-color var(--trans-dur), color var(--trans-dur);
-  }
+  
   
   .pl {
     box-shadow: 2em 0 2em rgba(0, 0, 0, 0.2) inset, -2em 0 2em rgba(255, 255, 255, 0.1) inset;
@@ -342,3 +341,5 @@ ul li a {
   
   
   
+
+
